unpackaged/main/default/objects/Case/fields/Account_Region_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Account_Region_at_Create__c</fullName>
    <label>Account Region at Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>