unpackaged/main/default/objects/Case/fields/Account_State_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Account_State_at_Create__c</fullName>
    <label>Account State at Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>