unpackaged/main/default/objects/Case/fields/Account_Status_Committed__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Committed__c</fullName>
    <formula>Account.Account_Status_Committed__c</formula>
    <label>Account Status (Committed)</label>
    <type>Text</type>
</CustomField>