unpackaged/main/default/objects/Case/fields/Account_Support_SLA_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Account_Support_SLA_at_Create__c</fullName>
    <label>Account Support SLA at Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>