unpackaged/main/default/objects/Case/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>The age in days a ticket has been open</description>
    <formula>IF(IsClosed,  DATEVALUE(ClosedDate)  - DATEVALUE(CreatedDate) ,TODAY()-DATEVALUE(CreatedDate))</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>