unpackaged/main/default/objects/Case/fields/Assignments__c.field-meta.xml
<CustomField>
    <fullName>Assignments__c</fullName>
    <label>zOLD_# Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>