unpackaged/main/default/objects/Case/fields/Auto_reply_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Auto_reply_Sent_At__c</fullName>
    <label>Auto-reply Sent At</label>
    <type>DateTime</type>
</CustomField>