unpackaged/main/default/objects/Case/fields/Billing_Triage_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Triage_Status__c</fullName>
    <label>Billing Triage Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>