unpackaged/main/default/objects/Case/fields/CSAT_Comment__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Comment__c</fullName>
    <businessOwnerUser>jay@retool.com</businessOwnerUser>
    <label>CSAT Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>