unpackaged/main/default/objects/Case/fields/CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Score__c</fullName>
    <businessOwnerUser>jay@retool.com</businessOwnerUser>
    <label>CSAT Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>