unpackaged/main/default/objects/Case/fields/Current_Support_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Current_Support_Assignment__c</fullName>
    <formula>TEXT( $User.Support_Assignment__c )</formula>
    <label>Current Support Assignment</label>
    <type>Text</type>
</CustomField>