unpackaged/main/default/objects/Case/fields/Current_Support_Queues_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Current_Support_Queues_Assigned__c</fullName>
    <formula>IF(INCLUDES( $User.Eligible_Queues__c , &quot;Premium Queue&quot;), &quot;Premium Queue, &quot;, &quot;&quot;) &amp;
 IF(INCLUDES( $User.Eligible_Queues__c , &quot;Enterprise Queue&quot;), &quot;Enterprise Queue, &quot;, &quot;&quot;) &amp;
 IF(INCLUDES( $User.Eligible_Queues__c , &quot;Customer Service Queue&quot;), &quot;Customer Service Queue, &quot;, &quot;&quot;)</formula>
    <label>Current Support Queues Assigned</label>
    <type>Text</type>
</CustomField>