unpackaged/main/default/objects/Case/fields/Data_Issue_Text_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Data_Issue_Text_Stamp__c</fullName>
    <label>Data Issue Text Stamp</label>
    <type>TextArea</type>
</CustomField>