unpackaged/main/default/objects/Case/fields/DE_at_Create__c.field-meta.xml
<CustomField>
    <fullName>DE_at_Create__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DE at Create</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>