unpackaged/main/default/objects/Case/fields/Deescalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deescalation_Reason__c</fullName>
    <label>Deescalation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Falsely marked Critical</fullName>
            </value>
            <value>
                <fullName>Issue mitigated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>