unpackaged/main/default/objects/Case/fields/Deescalation_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Deescalation_Reason_Details__c</fullName>
    <label>Deescalation Reason Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>