unpackaged/main/default/objects/Case/fields/Deployment_Detail_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Detail_at_Create__c</fullName>
    <label>Deployment Detail at Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>