unpackaged/main/default/objects/Case/fields/Effort__c.field-meta.xml
<CustomField>
    <fullName>Effort__c</fullName>
    <label>Effort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Bored</fullName>
            </value>
            <value>
                <fullName>2 - Comfort</fullName>
            </value>
            <value>
                <fullName>3 - Stretch</fullName>
            </value>
            <value>
                <fullName>4 - Stress</fullName>
            </value>
            <value>
                <fullName>5 - Exhausted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>