unpackaged/main/default/objects/Case/fields/First_Closed_By_Bot__c.field-meta.xml
<CustomField>
    <fullName>First_Closed_By_Bot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Closed By Bot?</label>
    <type>Checkbox</type>
</CustomField>