unpackaged/main/default/objects/Case/fields/First_Customer_Reply_At__c.field-meta.xml
<CustomField>
    <fullName>First_Customer_Reply_At__c</fullName>
    <label>First Customer Reply At</label>
    <type>DateTime</type>
</CustomField>