unpackaged/main/default/objects/Case/fields/First_Non_Support_Response_At__c.field-meta.xml
<CustomField>
    <fullName>First_Non_Support_Response_At__c</fullName>
    <label>First Non-Support Response At</label>
    <type>DateTime</type>
</CustomField>