unpackaged/main/default/objects/Case/fields/First_Retool_Reply_At__c.field-meta.xml
<CustomField>
    <fullName>First_Retool_Reply_At__c</fullName>
    <label>First Retool Reply At</label>
    <type>DateTime</type>
</CustomField>