unpackaged/main/default/objects/Case/fields/First_Solved_At__c.field-meta.xml
<CustomField>
    <fullName>First_Solved_At__c</fullName>
    <label>First Solved At</label>
    <type>DateTime</type>
</CustomField>