unpackaged/main/default/objects/Case/fields/First_Support_Comment_At__c.field-meta.xml
<CustomField>
    <fullName>First_Support_Comment_At__c</fullName>
    <label>First Support Comment At</label>
    <type>DateTime</type>
</CustomField>