unpackaged/main/default/objects/Case/fields/First_Support_Comment_By__c.field-meta.xml
<CustomField>
    <fullName>First_Support_Comment_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Support Comment By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesFirstSupportComment</relationshipName>
    <type>Lookup</type>
</CustomField>