unpackaged/main/default/objects/Case/fields/Historical_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Historical_Complexity__c</fullName>
    <label>Historical Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One touch</fullName>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>