unpackaged/main/default/objects/Case/fields/Hosting_Style_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Style_at_Create__c</fullName>
    <label>Hosting Style at Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>