unpackaged/main/default/objects/Case/fields/Hours_to_First_Solve__c.field-meta.xml
<CustomField>
    <fullName>Hours_to_First_Solve__c</fullName>
    <formula>(First_Solved_At__c - Submitted_At__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours to First Solve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>