unpackaged/main/default/objects/Case/fields/Intercom_SLA__c.field-meta.xml
<CustomField>
    <fullName>Intercom_SLA__c</fullName>
    <label>Intercom SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>