unpackaged/main/default/objects/Case/fields/Is_Auto_reply_Skipped__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_reply_Skipped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to evaluate if an Auto-reply should be skipped.</description>
    <label>Is Auto-reply Skipped</label>
    <type>Checkbox</type>
</CustomField>