unpackaged/main/default/objects/Case/fields/Last_Assignment_Admin_Reply_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment_Admin_Reply_At__c</fullName>
    <label>Last Assignment Admin Reply At</label>
    <type>DateTime</type>
</CustomField>