unpackaged/main/default/objects/Case/fields/Last_Customer_Reply_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer_Reply_At__c</fullName>
    <label>Last Customer Reply At</label>
    <type>DateTime</type>
</CustomField>