unpackaged/main/default/objects/Case/fields/Last_On_Hold_At__c.field-meta.xml
<CustomField>
    <fullName>Last_On_Hold_At__c</fullName>
    <label>Last On Hold At</label>
    <type>DateTime</type>
</CustomField>