unpackaged/main/default/objects/Case/fields/Last_Open_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Open_At__c</fullName>
    <label>Last Open At</label>
    <type>DateTime</type>
</CustomField>