unpackaged/main/default/objects/Case/fields/Last_Reply_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Reply_By__c</fullName>
    <formula>IF(
  ISBLANK(Last_Retool_Reply_At__c) &amp;&amp; ISBLANK(Last_Customer_Reply_At__c),
  &quot;New&quot;,
  IF(
    ISBLANK(Last_Retool_Reply_At__c) || Last_Customer_Reply_At__c &gt; Last_Retool_Reply_At__c,
    &quot;Customer&quot;,
    IF(
      ISBLANK(Last_Customer_Reply_At__c) || Last_Customer_Reply_At__c &lt; Last_Retool_Reply_At__c,
      &quot;Retool&quot;,
      &quot;Error&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Reply By</label>
    <type>Text</type>
</CustomField>