unpackaged/main/default/objects/Case/fields/Last_Retool_Reply_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Retool_Reply_At__c</fullName>
    <label>Last Retool Reply At</label>
    <type>DateTime</type>
</CustomField>