unpackaged/main/default/objects/Case/fields/Last_Solved_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Solved_At__c</fullName>
    <label>Last Solved At</label>
    <type>DateTime</type>
</CustomField>