unpackaged/main/default/objects/Case/fields/Last_Waiting_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Waiting_At__c</fullName>
    <label>Last Waiting At</label>
    <type>DateTime</type>
</CustomField>