unpackaged/main/default/objects/Case/fields/Median_Time_to_Reply__c.field-meta.xml
<CustomField>
    <fullName>Median_Time_to_Reply__c</fullName>
    <label>Median Time to Reply</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>