unpackaged/main/default/objects/Case/fields/Minutes_to_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Minutes_to_Assignment__c</fullName>
    <formula>(First_Assignment_At__c - Submitted_At__c) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between first assignment ts and submitted at converted to minutes.</inlineHelpText>
    <label>Minutes to Assignment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>