unpackaged/main/default/objects/Case/fields/Next_Milestone_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Milestone_At__c</fullName>
    <label>Next Milestone At</label>
    <type>DateTime</type>
</CustomField>