unpackaged/main/default/objects/Case/fields/Next_Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Next_Milestone_Type__c</fullName>
    <label>Next Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Response</fullName>
            </value>
            <value>
                <fullName>Next Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>