unpackaged/main/default/objects/Case/fields/Ops_Portal_Call__c.field-meta.xml
<CustomField>
    <fullName>Ops_Portal_Call__c</fullName>
    <label>Ops Portal Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>