unpackaged/main/default/objects/Case/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solved - Retool Team</fullName>
            </value>
            <value>
                <fullName>Solved - Customer</fullName>
            </value>
            <value>
                <fullName>Solved - Community</fullName>
            </value>
            <value>
                <fullName>Solved - Documentation</fullName>
            </value>
            <value>
                <fullName>Unsolved - Bug Filed</fullName>
            </value>
            <value>
                <fullName>Unsolved - Request Filed</fullName>
            </value>
            <value>
                <fullName>Unsolved - Unresolved</fullName>
            </value>
            <value>
                <fullName>Unsolved - Customer Unresponsive</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Solved - Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>