unpackaged/main/default/objects/Case/fields/Owner_Queues_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Owner_Queues_Eligible__c</fullName>
    <formula>IF(INCLUDES( Owner:User.Eligible_Queues__c , &quot;Premium Queue&quot;), &quot;Premium Queue, &quot;, &quot;&quot;) &amp;
IF(INCLUDES( Owner:User.Eligible_Queues__c , &quot;Enterprise Queue&quot;), &quot;Enterprise Queue, &quot;, &quot;&quot;) &amp;
IF(INCLUDES( Owner:User.Eligible_Queues__c , &quot;Customer Service Queue&quot;), &quot;Customer Service Queue, &quot;, &quot;&quot;)</formula>
    <label>Owner Queues Eligible</label>
    <type>Text</type>
</CustomField>