unpackaged/main/default/objects/Case/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <label>Owner Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>