unpackaged/main/default/objects/Case/fields/Owner_Support_Ticket_Limit__c.field-meta.xml
<CustomField>
    <fullName>Owner_Support_Ticket_Limit__c</fullName>
    <formula>Owner:User.Support_Case_Limit__c</formula>
    <label>Owner Support Ticket Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>