unpackaged/main/default/objects/Case/fields/Plan_Name_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name_at_Create__c</fullName>
    <label>Plan Name at Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>