unpackaged/main/default/objects/Case/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <formula>IF(  Support_Tier__c = &#39;1; Customer&#39;, 1.5, IF( Support_Tier__c = &#39;2; Premium&#39;, 1.5, 1))</formula>
    <label>Points</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>