unpackaged/main/default/objects/Case/fields/Primary_Org_SID_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Primary_Org_SID_at_Create__c</fullName>
    <label>Primary Org SID at Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>