unpackaged/main/default/objects/Case/fields/Product_Area__c.field-meta.xml
<CustomField>
    <fullName>Product_Area__c</fullName>
    <label>Product Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App Building</fullName>
            </value>
            <value>
                <fullName>Deployments</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>Hub</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Workflows</fullName>
            </value>
            <value>
                <fullName>Uncategorized</fullName>
            </value>
            <value>
                <fullName>Toolchain</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Agents</fullName>
            </value>
            <value>
                <fullName>Deployments Inbox</fullName>
                <isActive>false</isActive>
                <label>Deployments Inbox</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>