unpackaged/main/default/objects/Case/fields/Product_Subarea__c.field-meta.xml
<CustomField>
    <fullName>Product_Subarea__c</fullName>
    <description>Dependent picklist based on Product Area</description>
    <label>Product Subarea (opt)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>UI (components, app settings, modules, etc)</fullName>
            </value>
            <value>
                <fullName>Logic (code editing, transformers, JS queries)</fullName>
            </value>
            <value>
                <fullName>IDE (state, event handlers, debug tools, etc)</fullName>
            </value>
            <value>
                <fullName>Query Library</fullName>
            </value>
            <value>
                <fullName>Platform (runtime, history, import, etc)</fullName>
            </value>
            <value>
                <fullName>Invoice Inquiry</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Billing Detail Updates</fullName>
            </value>
            <value>
                <fullName>Payment Remittance</fullName>
            </value>
            <value>
                <fullName>Purchase Orders</fullName>
            </value>
            <value>
                <fullName>Vendor Portal</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>RetoolDB - Building</fullName>
            </value>
            <value>
                <fullName>RetoolDB - Administration</fullName>
            </value>
            <value>
                <fullName>RetoolDB - Deployment</fullName>
            </value>
            <value>
                <fullName>Discount Programs</fullName>
            </value>
            <value>
                <fullName>Tutorials</fullName>
            </value>
            <value>
                <fullName>Templates</fullName>
            </value>
            <value>
                <fullName>Toolscript</fullName>
            </value>
            <value>
                <fullName>Source Control</fullName>
            </value>
            <value>
                <fullName>Environments</fullName>
            </value>
            <value>
                <fullName>Invites and archives</fullName>
            </value>
            <value>
                <fullName>Authentication to Retool</fullName>
            </value>
            <value>
                <fullName>Retool Portals</fullName>
            </value>
            <value>
                <fullName>Permissions</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Public Apps</fullName>
            </value>
            <value>
                <fullName>Retool Embed</fullName>
            </value>
            <value>
                <fullName>Themes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>