unpackaged/main/default/objects/Case/fields/Sentiment_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_at_Create__c</fullName>
    <label>Sentiment at Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>