unpackaged/main/default/objects/Case/fields/Slack_Channel_ID_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_ID_at_Create__c</fullName>
    <label>Slack Channel ID at Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>