unpackaged/main/default/objects/Case/fields/Slack_CSAT_Sent__c.field-meta.xml
<CustomField>
    <fullName>Slack_CSAT_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If we send Slack CSAT, mark this as true to ensure we don&#39;t send multiple times</description>
    <label>CSAT Sent</label>
    <type>Checkbox</type>
</CustomField>