unpackaged/main/default/objects/Case/fields/Slack_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Slack_Transcript__c</fullName>
    <label>Slack Transcript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>