unpackaged/main/default/objects/Case/fields/Slack_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_ID__c</fullName>
    <label>Slack User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>