unpackaged/main/default/objects/Case/fields/Slack_Username__c.field-meta.xml
<CustomField>
    <fullName>Slack_Username__c</fullName>
    <label>Slack Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>