unpackaged/main/default/objects/Case/fields/Source_Control_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Source_Control_at_Create__c</fullName>
    <label>Source Control at Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>