unpackaged/main/default/objects/Case/fields/Submitted_By_Email_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Email_at_Create__c</fullName>
    <label>Submitted By Email at Create</label>
    <type>Email</type>
</CustomField>