unpackaged/main/default/objects/Case/fields/Submitted_CCs__c.field-meta.xml
<CustomField>
    <fullName>Submitted_CCs__c</fullName>
    <label>Submitted CCs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>