unpackaged/main/default/objects/Case/fields/Time_in_Status__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Status__c</fullName>
    <formula>IF( NOW()- Last_Status_Change_At__c &gt;= 1 , TEXT( FLOOR( NOW()- Last_Status_Change_At__c ) ) &amp; &quot; days&quot; ,

IF( (NOW()- Last_Status_Change_At__c)*24 &gt;= 1 , TEXT( FLOOR( MOD( (NOW()- Last_Status_Change_At__c ) * 24, 24 ) ) ) &amp; &quot; hours&quot;,

IF( NOW()- Last_Status_Change_At__c &gt; 0 , TEXT( ROUND( MOD( (NOW()- Last_Status_Change_At__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;, &quot;&quot;

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Status</label>
    <type>Text</type>
</CustomField>