unpackaged/main/default/objects/Case/fields/Time_to_First_Retool_Reply__c.field-meta.xml
<CustomField>
    <fullName>Time_to_First_Retool_Reply__c</fullName>
    <formula>First_Retool_Reply_At__c -  First_Customer_Reply_At__c</formula>
    <label>Time to First Retool Reply</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>