unpackaged/main/default/objects/Case/fields/Time_to_Next_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Next_Milestone__c</fullName>
    <formula>IF( Minutes_to_Next_Milestone__c = 9999, &quot;&quot;, 

TEXT(FLOOR( Minutes_to_Next_Milestone__c / 1440)) &amp;&#39; Days &#39;&amp; TEXT( FLOOR( MOD(Minutes_to_Next_Milestone__c,1440 )  / 60)) &amp;&#39; hr &#39;&amp; 
TEXT(FLOOR(MOD( MOD(Minutes_to_Next_Milestone__c,1440),60)))&amp;&#39; min&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Next Milestone</label>
    <type>Text</type>
</CustomField>