unpackaged/main/default/objects/Case/fields/Triage_Notification__c.field-meta.xml
<CustomField>
    <fullName>Triage_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Triage Notification</label>
    <referenceTo>Centro__Message_Queue__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>