unpackaged/main/default/objects/Case/fields/Triage_Status__c.field-meta.xml
<CustomField>
    <fullName>Triage_Status__c</fullName>
    <label>Triage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>