unpackaged/main/default/objects/Case/fields/Triage_TS__c.field-meta.xml
<CustomField>
    <fullName>Triage_TS__c</fullName>
    <label>Triage TS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>