unpackaged/main/default/objects/Case/fields/Trigger_Linking__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Linking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Linking</label>
    <type>Checkbox</type>
</CustomField>