unpackaged/main/default/objects/Case/fields/UniqueEntry__Current_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Current_Endpoint__c</fullName>
    <label>Current Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>