unpackaged/main/default/objects/Case/fields/UniqueEntry__RingLead_App_Field__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__RingLead_App_Field__c</fullName>
    <label>RingLead App Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>