unpackaged/main/default/objects/Case/recordTypes/Security.recordType-meta.xml
<RecordType>
    <fullName>Security</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <label>Security</label>
</RecordType>