unpackaged/main/default/objects/Case/recordTypes/Support.recordType-meta.xml
<RecordType>
    <fullName>Support</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <label>Support</label>
</RecordType>